# 3D-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  HANDOFF.md  README.md  build-release.bat  vcpkg.json
shaders/: bloom_downsample.frag  bloom_upsample.frag  composite.frag  cull.comp  fullscreen.vert  fxaa.frag  hzb_reduce.comp  ibl_brdf.comp  ibl_env.comp  ibl_irradiance.comp  ibl_prefilter.comp  mesh.frag  mesh.vert  mesh_skinned.vert  shadow.vert  shadow_skinned.vert  sky.frag  sky.vert  ssao.frag  triangle.vert
src/: main.cpp
src/engine/: asset_browser.cpp  asset_browser.h  audio.cpp  audio.h  buffer.cpp  buffer.h  camera.cpp  camera.h  components.h  config.h  debug_ui.cpp  debug_ui.h  depth.cpp  depth.h  descriptors.cpp  descriptors.h  dlss.cpp  dlss.h  engine.cpp  engine.h  frustum.cpp  frustum.h  gltf_loader.cpp  gltf_loader.h  gpu_cull.cpp  gpu_cull.h  hzb.cpp  hzb.h  ibl.cpp  ibl.h  instancing.cpp  instancing.h  jobs.cpp  jobs.h  lights.cpp  lights.h  material_graph.cpp  material_graph.h  mesh.cpp  mesh.h  (+40 more)
src/utils/: vk_check.h
